Fix agent runtime for multi-app E2E and preserve HTML reports
Target agent bytecode at Java 21 so -javaagent works on goof/VulnerableApp
JVMs. Allow empty watchlists, skip empty report overwrites that clobber
Surefire hits when JAVA_TOOL_OPTIONS hits parent Maven, and add E2E scripts
for java-goof and VulnerableApp with Snyk import + test runs under the agent.